# pdfwork

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.rst  conda_env.yml  debug.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yaml
docs/: conf.py  example.bookmark.txt  index.rst
docs/source/: conf.py  index.rst  modules.rst  pdfwork.rst  usage.rst
pdfwork/: __init__.py  actions.py  cli.py  entries.py  exceptions.py  extract.py  merge.py  model.py  outline.py  parse_outline.py  range.py  split.py  tag.py  utils.py
tests/: __init__.py  __main__.py  tagfile_test.txt  test_cli.py  test_entries.py  test_extract.py  test_merge.py  test_model.py  test_outline.py  test_pdfwork.py  test_split.py  test_tag.py  test_utils.py
