[tool.poetry]
name = "pdfwork"
version = "0.1.0"
description = ""
authors = ["zombie110year <zombie110year@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
PyPDF2 = "^1.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"

[[tool.poetry.source]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/simple"
name = "tsinghua"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
